# bayespam

./: .travis.yml  Cargo.toml  LICENSE  README.md  model.json
src/: classifier.rs  lib.rs  main.rs
