[package]
name = "bayespam"
version = "1.0.2"
authors = ["zenoxygen <zenoxygen@protonmail.com>"]
edition = "2018"

description = "A simple bayesian spam classifier."
homepage = "https://github.com/zenoxygen/bayespam"
repository = "https://github.com/zenoxygen/bayespam"

keywords = ["bayesian", "spam", "classifier"]
categories = ["science"]
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[badges]
travis-ci = { repository = "zenoxygen/bayespam", branch = "master" }
maintenance = { status = "actively-developed" }
